--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "webextension-polyfill": "^0.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "INLINE_RUNTIME_CHUNK=false react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/webextension-polyfill": "^0.10.0",
+    "customize-cra": "^1.0.0",
+    "prettier": "2.8.7",
+    "react-app-rewired": "^2.2.1"
   }
 }
